project/lab2/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: lab2
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80
